--- a/src/html/reg.html
+++ b/src/html/reg.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Flyme 账号 - 登录</title>
+  <title>Flyme 账号 - 注册</title>
   <link rel="icon" href="../images/login/favicon.ico" sizes="32x32">
   <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="../css/login.css">
   <script src="../../node_modules/jquery/dist/jquery.js"></script>
   <script src="../../node_modules/bootstrap/dist/js/bootstrap.js"></script>
-  <script src="../js/login.js"></script>
+
 </head>
 
 <body>
@@ -19,7 +19,6 @@
     <div class="row top-nav">
       <a href="./index.html">
         <div class="col-md-1 top-logo">
-
         </div>
       </a>
     </div>
@@ -32,9 +31,7 @@
           <!-- 偏移8格 -->
           <form class="col-md-4 col-md-offset-8 main-form">
             <div class="top-title">
-              <a href="javascript:;" class="black" id="account">账号登录</a>
-              <span></span>
-              <a href="javascript:;" id="qrCode">二维码登录</a>
+             <h4>注册 Flyme 账号</h4> 
             </div>
             <!-- 警告框区域 -->
             <div class="main-warn">
@@ -44,37 +41,40 @@
             <!-- 账号登录区域 -->
             <div class="login1">
 
-              <div class="one-user">
-                <span>+ 86</span>
-                <span></span>
-                <input type="text" name="username" id="username" placeholder="输入用户名或手机号">
-              </div>
-              <div class="one-user">
-                <input type="password" name="password" id="password" placeholder="请输入密码">
-              </div>
-              <div class="main-verify">
-                <span></span>
-                <div>
-                  <span>点击按钮验证(已开启免验证模式)</span>
-                </div>
-                <span></span>
-              </div>
-              <div class="main-check">
-                <input type="checkbox" name="checkbox" id="checkbox">
-                <span>记住登录状态</span>
-              </div>
-              <!-- 确认按钮 -->
-              <input type="submit" id="submit" value="登录">
-              <div class="main-bottom">
-                <a href="./reg.html">注册</a>
-                <a href="javascript:;">忘记密码？</a>
-              </div>
+            <div class="one-user">
+              <span>+ 86</span>
+              <span></span>
+              <input type="text" name="username" id="username" placeholder="输入用户名或手机号">
             </div>
-            <!-- 二维码登录区域 -->
-            <div class="qr">
-              <img src="../images/login/mzQrShow.jpg" alt="">
-              <p>请使用账号中心右上角或最新的Flyme系统相机扫码功能，扫码登录</p>
+            <div class="one-user">
+              <input type="password" name="password" id="password" placeholder="请输入密码">
             </div>
+            <div class="main-verify">
+              <span></span>
+              <div>
+                <span>点击按钮验证(已开启免验证模式)</span>
+              </div>
+              <span></span>
+            </div>
+            <div class="main-check">
+              <input type="checkbox" name="checkbox" id="checkbox2">
+              <span class="pact">注册账号即表示您同意并愿意遵守 
+                </span> 
+                <a href="javascript:;">Flyme账号服务协议 、 
+                  法律声明 和 隐私政策</a>
+            </div>
+            <!-- 确认按钮 -->
+            <input type="submit" id="submit" value="立即注册">
+            <div class="main-bottom">
+              <a href="./login.html">登录</a>
+              <a href="javascript:;"></a>
+            </div>
+          </div>
+          <!-- 二维码登录区域 -->
+          <div class="qr">
+            <img src="../images/login/mzQrShow.jpg" alt="">
+            <p>请使用账号中心右上角或最新的Flyme系统相机扫码功能，扫码登录</p>
+          </div>
           </form>
         </div>
       </div>
@@ -108,12 +108,11 @@
         <a href="javascript"></a>
       </div>
       <div class="row floor-tow">
-        <span>©2020 Meizu Telecom Equipment Co., Ltd. All rights reserved.备案号: 粤ICP备13003602号-4经营许可证编号: 粤B2-20130198
-          营业执照</span>
+        <span>©2020 Meizu Telecom Equipment Co., Ltd. All rights reserved.备案号: 粤ICP备13003602号-4经营许可证编号: 粤B2-20130198 营业执照</span>
         <span>粤公网安备 44049102496076号</span>
       </div>
     </div>
-
+    
   </div>
 </body>
 
