购物车页面基本完成

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -492,8 +492,6 @@
       </div>
 
     </div>
-
-
   </div>
 
 
@@ -568,6 +566,7 @@
         </li>
         
       </ul>
+    </div>
     </div>
 </body>
 
