基本完成需求

--- a/src/html/shopDet.html
+++ b/src/html/shopDet.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>xx - 魅族商城</title>
-  <!-- <link rel="icon" href="../images/index/favicon-90c2e618ff.ico" sizes="32x32"> -->
+  <title>魅族商城</title>
+  <link rel="icon" href="../images/index/favicon-90c2e618ff.ico" sizes="32x32">
   <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="../css/shopDet.css">
   <script src="../../node_modules/jquery/dist/jquery.js"></script>
